--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Introduction</h1>
+					<h3>Introduction</h3>
 					<h5>to</h5>
-					<h3>Typescript</h3>
+					<h1>Typescript</h1>
 					<p>
 						<!-- <small>by
 							<a href="https://twitter.com/Karinaislam2">Karina</a> and
@@ -64,8 +64,33 @@
 						<li>How to run Typescript</li>
 					</ol>
 				</section>
-				
-
+				<section>
+					<h3>upside</h3>
+					<p>It provides advanced autocompletion, navigation, and refactoring. Having such tools is almost a requirement for large projects. </p>
+					<p>TypeScript offers the best developer tooling experience available in the JavaScript world today.
+						</p>
+				</section>
+				<section>
+					<h3>Downside</h3>
+					<p>Type correctness does not guarantee program correctness.</p>
+					<p>The gist: Static types don’t reduce over-all bug density by much, but you may still love them for the developer tooling.</p>
+					<p>Type annotations obviously create more syntax noise, and that syntax makes code harder to read, and harder to maintain.</p>
+					<p>harder to Generic functions & polymorphism
+							Higher order functions
+							Object composition</p>
+					<p>Static types are overrated.</p>
+				</section>
+				<section>
+					<h2>References</h2>
+					<ul>
+						<li><a href="https://basarat.gitbooks.io/typescript/"><Typescript deep dive/a></li>
+						<li><a href="https://www.youtube.com/watch?v=5UPMqtrbw7E">Introduction to TypeScript</a></li>
+						<li><a href=""></a></li>
+						<li><a href=""></a></li>
+						<li><a href="https://medium.com/javascript-scene/the-shocking-secret-about-static-types-514d39bf30a3"></a>The Shocking Secret About Static Types</li>
+						<li><a href="https://medium.com/javascript-scene/you-might-not-need-typescript-or-static-types-aa7cb670a77b">You Might Not Need TypeScript</a></li>
+					</ul>
+				</section>
 				<section style="text-align: left;">
 					<h1>Thank you</h1>
 					<p>
