--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<link rel="stylesheet" href="css/reveal.css">
 	<link rel="stylesheet" href="css/theme/black.css" id="theme">
-
+	<link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
 	<!-- Theme used for syntax highlighting of code -->
 	<link rel="stylesheet" href="lib/css/zenburn.css">
 
@@ -54,33 +54,87 @@
 					</small>
 				</p>
 			</section>
-
+			<section>
+				<section>
+					<h2>Who is</h2>
+					<h1>JS Dude?</h1>
+				</section>
+				<section>
+					<img src="./images/others/dude.jpeg" alt="">
+					<ul>
+						<li style="color:purple">
+							<strong>@jsdude005</strong>
+						</li>
+						<li>Organize Chicago JavaScript meetup</li>
+						<li>Sr. Web Developer, Nielsen</li>
+						<li>Enjoy Learning, talking about JavaScript</li>
+						<!-- <li>Twin Cities code camp in 2013, 2014</li> -->
+					</ul>
+				</section>
+				<section>
+					<h2>Jump from 14,000ft </h2>
+					<img src="./images/others/jump.JPG" alt="">
+				</section>
+				<!-- <section>
+					<img src="./images/others/skydiving.JPG" alt="">
+				</section> -->
+				<section>
+					<h2>Chicago Marathon 2016, 2017</h2>
+					<img src="./images/others/marathon.jpg" alt="">
+				</section>
+				<section>
+					<h2>10,000 volts</h2>
+					<img src="./images/others/mudder.jpg" alt="">
+				</section>
+				<section>
+					<h4>international Javascript conference, London</h4>
+					<img src="./images//others//london.jpg" alt="">
+				</section>
+			</section>
 			<section>
 				<h2>We will cover</h2>
 				<ol>
 					<li>What problem does Typescript solves</li>
 					<li>Why you should consider Typescript</li>
 					<li>How to run Typescript</li>
-					<li>Features in typescript</li>
+					<li>Features in typescript (excluding ES6)</li>
 					<li>When not to use Typescript</li>
 
 				</ol>
 			</section>
 			<section>
+				<h2>Typescript is a super set</h2>
 				<img src="./images//venn-es5-es6-typescript.png" alt="">
 			</section>
 			<section>
 				<section>
-					<h2>Top 10 JS errors</h2>
-					<img src="./images/errors.png" alt="">
+					<h1>JS Error</h1>
+				</section>
+				<section>
+					<p>Uncaught TypeError: Cannot read property</p>
+					<img src="./images//type-error.png" alt="">
+					<ul class="fragment">
+						<li>Not getting data in the right format</li>
+						<li>React: Improper initialization of state</li>
+						<li>Angular2+: parsing template before data binding</li>
+					</ul>
+					<br>
+					<br>
 					<p>
 						<small>
 							<a href="https://rollbar.com/blog/top-10-javascript-errors/">Top 10 JavaScript errors from 1000+ projects </a>
 						</small>
 					</p>
 				</section>
+				<section>
+					<h2>Top 10 JS errors</h2>
+					<img src="./images/errors.png" alt="">
+				</section>
 			</section>
 			<section>
+				<h2>Install Typescript</h2>
+				<br>
+				<br>
 				<pre class="typescript"><code data-trim>
 							npm install -g typescript
 					</code></pre>
@@ -477,6 +531,24 @@ let c: Color = Color.Green;
 				</section>
 			</section>
 			<section>
+				<section>
+					<h1>Typescript tooling</h1>
+				</section>
+				<section>
+					<ul>
+						<li>tsconfig</li>
+						<li>TSLint</li>
+						<li>webpack plugin</li>
+						<li>VS Code plugin</li>
+					</ul>
+				</section>
+			</section>
+			<section>
+				<section>
+					<h1>Debugging</h1>
+				</section>
+			</section>
+			<section>
 				<h2>Typescript features isn't in ES6</h2>
 				<ul>
 					<li>Decorators</li>
@@ -506,6 +578,26 @@ let c: Color = Color.Green;
 				<p>Static types are overrated.</p>
 			</section>
 			<section>
+				<section>
+					<h1>Learn New thing</h1>
+				</section>
+				<section>
+					<h2>Learn react by building</h2>
+					<ul>
+						<li>
+							<a href="http://thatjsdude.com/workshops/react/mn.html">ReactJS Workshop for beginners</a>
+						</li>
+						<li>Build an
+							<a href="https://ema-john.firebaseapp.com/">e-commerce site</a>
+						</li>
+						<li>Email:
+							<span style="color:lightcoral">khan4019@gmail.com</span>
+						</li>
+					</ul>
+					<img style="height:350px;" src="./images/others/workshop1.jpg" alt="">
+				</section>
+			</section>
+			<section>
 				<h2>References</h2>
 				<ul>
 					<li>
@@ -516,10 +608,10 @@ let c: Color = Color.Green;
 						<a href="https://www.youtube.com/watch?v=5UPMqtrbw7E">Introduction to TypeScript</a>
 					</li>
 					<li>
-						<a href=""></a>
+						<a href="https://codeburst.io/strict-types-typescript-flow-javascript-to-be-or-not-to-be-959d2d20c007">Strict Types: Typescript</a>
 					</li>
 					<li>
-						<a href=""></a>
+						<a href="https://eng.lyft.com/typescript-at-lyft-64f0702346ea">TypeScript at Lyft</a>
 					</li>
 					<li>
 						<a href="https://medium.com/javascript-scene/the-shocking-secret-about-static-types-514d39bf30a3"></a>The Shocking Secret About Static Types</li>
