--- a/index.html
+++ b/index.html
@@ -587,6 +587,15 @@ let c: Color = Color.Green;
 			</section>
 			<section>
 				<section>
+					<h2>Quiz Time</h2>
+					<br>
+					<br>
+					<br>
+					<p>How to run typescript in the command line?</p>
+				</section>
+			</section>
+			<section>
+				<section>
 					<h1>Use with other framework</h1>
 				</section>
 				<section>
@@ -670,7 +679,7 @@ let c: Color = Color.Green;
 					<li>Type correctness does not guarantee program correctness</li>
 					<li>Static types don’t reduce over-all bug density by much</li>
 					<li>Might create more syntax noise</li>
-					<li>harder to Generic functions & polymorphism Higher order functions Object composition</li>
+					<li>Harder to Generic functions & polymorphism Higher order functions Object composition</li>
 					<li>Static types are overrated</li>
 				</ul>
 			</section>
@@ -711,6 +720,9 @@ let c: Color = Color.Green;
 						</code>
 					</pre>
 				</section>
+				<section>
+
+				</section>
 			</section>
 			<section>
 				<section>
@@ -719,17 +731,18 @@ let c: Color = Color.Green;
 				<section>
 					<h2>Learn react by building</h2>
 					<ul>
-						<li>
-							<a href="http://thatjsdude.com/workshops/react/mn.html">ReactJS Workshop for beginners</a>
-						</li>
 						<li>Build an
 							<a href="https://ema-john.firebaseapp.com/">e-commerce site</a>
 						</li>
-						<li>Email:
-							<span style="color:lightcoral">khan4019@gmail.com</span>
+						<li>
 						</li>
 					</ul>
 					<img style="height:350px;" src="./images/others/workshop1.jpg" alt="">
+				</section>
+				<section>
+					<p>thatjsdude.com/workshops/react</p>
+					Email:
+							<span style="color:lightcoral">khan4019@gmail.com</span>
 				</section>
 			</section>
 			<section>
@@ -764,6 +777,9 @@ let c: Color = Color.Green;
 					<p>-Website:
 						<a href="http://thatjsdude.com">thatjsude.com</a>
 					</p>
+					<p>-workshop:
+							<a href="http://thatjsdude.com/workshops/react/">thatjsdude.com/workshops/react/</a>
+						</p>
 					<p>-Youtube:
 						<a href="https://www.youtube.com/c/ThatJSDude">youtube.com/c/ThatJSDude</a>
 					</p>
